# Oriented-Barcode-CenterNet

./: Hardnet Oriented BBox Angle_4Corners Train.ipynb  README.md  gptgenerated_barcode_augment.py  hardnet.py  hardnet_bbox_angle_corner_inference.py
cpp/: CMakeLists.txt  example-app.cpp
